--- a/front-server/deploy-conf/nginx.conf
+++ b/front-server/deploy-conf/nginx.conf
@@ -6,7 +6,7 @@ map $http_upgrade $connection_upgrade {
 server {
   listen       80;
   listen  [::]:80;
-  server_name  http://52.79.155.148/;
+  server_name  http://52.79.155.148;
 
   #access_log  /var/log/nginx/host.access.log  main;
 
