--- a/front-server/deploy-conf/nginx.conf
+++ b/front-server/deploy-conf/nginx.conf
@@ -6,7 +6,7 @@ map $http_upgrade $connection_upgrade {
 server {
   listen       80;
   listen  [::]:80;
-  server_name  http://118.67.130.158;
+  server_name  118.67.130.158;
 
   #access_log  /var/log/nginx/host.access.log  main;
 
