--- a/back-server/src/main/resources/application.properties
+++ b/back-server/src/main/resources/application.properties
@@ -11,9 +11,12 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 # mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/hmje?serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.url=jdbc:mysql://hmje.c2dmjuulvzgw.ap-northeast-2.rds.amazonaws.com:3306/hmje?serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=hmje
+spring.datasource.password=hmje
+#spring.datasource.url=jdbc:mysql://localhost:3306/hmje?serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull
+#spring.datasource.username=test
+#spring.datasource.password=test
 
 # jpa
 spring.jpa.hibernate.ddl-auto=create 
