--- a/front-server/package.json
+++ b/front-server/package.json
@@ -28,6 +28,7 @@
         "react-chartjs-2": "^5.2.0",
         "react-custom-pagination": "^1.6.8",
         "react-dom": "^18.2.0",
+        "react-h5-audio-player": "^3.8.6",
         "react-js-pagination": "^3.0.3",
         "react-markdown": "^8.0.6",
         "react-paginate": "^8.1.4",
@@ -36,6 +37,7 @@
         "react-scripts": "5.0.1",
         "react-speech-recognition": "^3.10.0",
         "react-toastify": "^9.1.1",
+        "react-wordcloud": "^1.2.7",
         "redux": "^4.2.1",
         "styled-components": "^5.3.8",
         "three": "^0.150.1",
